--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -42,7 +42,7 @@
 <div id="personPos">
   <div class="row">
     <div class="large-12 small-12 columns">
-      <img src="assets/index/Emre_1.png">
+      <img src="assets/index/Emre_1.png" alt="Emre Person">
     </div>
   </div>
 </div>
