--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -24,7 +24,7 @@
     <div class="large-12 columns">
       <aside id="promoBanner">
         <div class="large-8 small-12 columns">
-          <img src="/assets/voksen/nyheter/historienOmEuropa.png">
+          <img src="/assets/voksen/nyheter/historienOmEuropa.png" alt="Bilde av historien om europa">
         </div>
         <div class="large-4 small-12 columns">
           <div id="promobannerTextBox">
@@ -53,7 +53,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>ALF PRØYSEN</h3>
-          <img class="articleImg" src="/assets/voksen/nyheter/alfProysen.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/alfProysen.png" alt="Alt proysen" />
           <p>Alf Prøysen ville fylt 100 år i 2014, og i
             anledning jubileet tilbyr vi egne temasider om
             den folkekjære visesangeren og forfatteren.</p>
@@ -64,7 +64,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>INNHOLD PÅ ENGELSK</h3>
-          <img class="articleImg" src="/assets/voksen/nyheter/innholdPaaEngelsk.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/innholdPaaEngelsk.png" alt="Engelsk innhold" />
           <ul>
             <li>- Nye kapitler til fortellingen 'Dad missing!'</li>
             <li>- Nivådelte oppgaver og tester til alle kapitler</li>
@@ -79,7 +79,7 @@
       <div class="large-4 small-12 columns">
         <article>
           <h3>TV-AKSJONEN 2014</h3>
-          <img class="articleImg" src="/assets/voksen/nyheter/tv-aksjonenNRK.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/tv-aksjonenNRK.png" alt="Tv-aksjonen"/>
           <p>Dato for årets TV-aksjon er 19. oktober,
             og Salaby tilbyr også i år egne skolesider
             knyttet til tema for aksjonen.</p>
@@ -92,7 +92,7 @@
       <div class="large-6 small-12 columns">
         <article>
           <h3>OVERSKRIFT 3</h3>
-          <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/budd.png" alt="Buddismen"/>
           <p>På mandag drar vi til Trondheim for å delta på konferansen Visjon 2030.
 Konferansen omtales som en nasjonal innovasjonsdugnad. Tema er hvordan verden kan oppnå de universelle bærekraftsmålene som skal vedtas i FN til høsten, og det blir et særlig fokus på helse, utdanning og hvordan norske, innovative løsninger kan bidra.
 Vår ambisjon er å bidra til enda flere barn lærer enda bedre. Vi vil fortsette å spille på lag med lærere og elever.
@@ -106,7 +106,7 @@ Kanal S er den nye hovedportalen for 5. - 7. trinn.</p>
       <div class="large-6 small-12 columns">
         <article>
           <h3>OVERSKRIFT 3</h3>
-          <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
+          <img class="articleImg" src="/assets/voksen/nyheter/budd.png" alt="Buddismen"/>
           <p>Denne uken var ulike norske aktører invitert til å være med å diskutere hvordan innovative løsninger kan bidra til at verden når FN-målet om å utrydde all ekstrem fattigdom i verden innen 2030.
 Vi var med, og snakket blant om hvordan Salaby brukes i Norge og utlandet. Mange spennende diskusjoner, og stas med så mye på fokus på viktigheten av utdanning som virkemiddel for å utrydde fattigdom!
 På konferansen møtte vi også utenriksminister Børge Brende, her tester han ferdigheter i Salaby.</p>
@@ -119,12 +119,6 @@ På konferansen møtte vi også utenriksminister Børge Brende, her tester han f
 
 <%= render 'shared/page_footer' %>
     
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
-<script src="js/menuHeadScript.js"></script>
-<script>
-    $(document).foundation();
-</script>
 </body>
 
 </html>
