--- a/Salabytest/app/views/static_pages/info/kompetanse.html.erb
+++ b/Salabytest/app/views/static_pages/info/kompetanse.html.erb
@@ -20,7 +20,7 @@
     <div class="large-12 columns">
 <aside id="promoBanner">
         <div class="large-8 small-12 columns">
-          <img src="/assets/voksen/nyheter/historienOmEuropa.png">
+          <img src="/assets/voksen/nyheter/historienOmEuropa.png" alt="Bilde av historien om europa">
         </div>
         <div class="large-4 small-12 columns">
           <div id="promobannerTextBox">
@@ -495,9 +495,6 @@
 
     <%= render 'shared/page_footer' %>
 
-<script>
-    $(document).foundation();
-</script>
 </body>
 
 </html>
