--- a/Salabytest/app/views/users/_form_edit.html.erb
+++ b/Salabytest/app/views/users/_form_edit.html.erb
@@ -22,7 +22,7 @@
         <label>Gjenta passordet</label>
         <%= f.password_field :password_confirmation %>
 
-        <%= f.submit "Rediger konto", class: "button expand" %>
+        <%= f.submit "Large endringer", class: "button expand" %>
     <% end %>
   </div>
 </div>
