--- a/Salabytest/app/views/users/edit.html.erb
+++ b/Salabytest/app/views/users/edit.html.erb
@@ -25,8 +25,8 @@
 
                             <%= render 'form_edit' %>
 
-                            <%= link_to 'Vis Brukere', @user %> |
-                            <%= link_to 'Tilbake', users_path %>
+                            <%= link_to 'Vis Brukere', users_path %> |
+                            <%= link_to 'Tilbake',  @user %>
                     </div>
                 </div>
             </div>
