--- a/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
+++ b/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
@@ -24,3 +24,12 @@ body {
 #wrapper{
     min-height: 100%;
 }
+
+.placeholderImg {
+    width: 200px;
+    height: 200px;
+    float: right;
+    background-color: red;
+    top: 0;
+    position: relative;
+}
