--- a/Salabytest/app/views/static_pages/info/bestilling.html.erb
+++ b/Salabytest/app/views/static_pages/info/bestilling.html.erb
@@ -22,7 +22,7 @@
     <div class="large-12 columns">
 <aside id="promoBanner">
         <div class="large-8 small-12 columns">
-          <img src="/assets/voksen/nyheter/historienOmEuropa.png">
+          <img src="/assets/voksen/nyheter/historienOmEuropa.png" alt="Bilde av historien om europa">
         </div>
         <div class="large-4 small-12 columns">
           <div id="promobannerTextBox">
@@ -49,12 +49,12 @@
     <div class="row">
       <div class="large-12 columns">
         <label>Velg type</label>
-        <input type="radio" name="pokemon" value="Kommune" id="kommune">
-        <label for="pokemonRed">Kommune</label>
-        <input type="radio" name="pokemon" value="Skole" id="skole">
-        <label for="pokemonBlue">Skole</label>
-        <input type="radio" name="pokemon" value="Barnehagen" id="barnehage">
-        <label for="pokemonBlue">Barnehage</label>
+        <input type="radio" name="kommune" value="Kommune" id="kommune">
+        <label for="kommune">Kommune</label>
+        <input type="radio" name="skole" value="Skole" id="skole">
+        <label for="skole">Skole</label>
+        <input type="radio" name="barnehage" value="Barnehagen" id="barnehage">
+        <label for="barnehage">Barnehage</label>
       </div>
       <div class="row">
         <div class="large-6 columns">
@@ -120,12 +120,7 @@
 
     <%= render 'shared/page_footer' %>
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
-<script src="js/menuHeadScript.js"></script>
-<script>
-    $(document).foundation();
-</script>
+
 </body>
 
 </html>
