--- a/Salabytest/app/views/static_pages/info/omByparken.html.erb
+++ b/Salabytest/app/views/static_pages/info/omByparken.html.erb
@@ -20,7 +20,7 @@
     <div class="large-12 columns">
 <aside id="promoBanner">
         <div class="large-8 small-12 columns">
-          <img src="/assets/voksen/nyheter/historienOmEuropa.png">
+          <img src="/assets/voksen/nyheter/historienOmEuropa.png" alt="Bilde av historien om europa">
         </div>
         <div class="large-4 small-12 columns">
           <div id="promobannerTextBox">
@@ -70,16 +70,10 @@ Mange nye bøker i biblioteket </p>
 
     </div>
   </div>
+    </div>
 
     <%= render 'shared/page_footer' %>
 
-  <script src="js/vendor/jquery.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script src="js/menuHeadScript.js"></script>
-  <script>
-      $(document).foundation();
-  </script>
 </body>
 
 </html>
