--- a/Salabytest/app/views/static_pages/info/omKanalS.html.erb
+++ b/Salabytest/app/views/static_pages/info/omKanalS.html.erb
@@ -21,7 +21,7 @@
     <div class="large-12 columns">
 <aside id="promoBanner">
         <div class="large-8 small-12 columns">
-          <img src="/assets/voksen/nyheter/historienOmEuropa.png">
+          <img src="/assets/voksen/nyheter/historienOmEuropa.png" alt="Bilde av historien om europa">
         </div>
         <div class="large-4 small-12 columns">
           <div id="promobannerTextBox">
@@ -68,16 +68,10 @@ Kanal S befinner seg i Nyhetstårnet i Salaby. Ved bruk av filmer, animasjoner, 
 
     </div>
   </div>
-
+    </div>
     <%= render 'shared/page_footer' %>
 
-  <script src="js/vendor/jquery.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script src="js/menuHeadScript.js"></script>
-  <script>
-      $(document).foundation();
-  </script>
+
 </body>
 
 </html>
