--- a/Salabytest/app/views/layouts/application.html.erb
+++ b/Salabytest/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Salaby.no | En læringsportal" %></title>
+    <title>Salaby.no | En læringsportal</title>
 
     <%= stylesheet_link_tag    "application", debug: :false %>
     <%= javascript_include_tag "vendor/modernizr", debug: :false %>
