--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -21,9 +21,8 @@ body {
       position: fixed; 
       top: 0; 
       left: 0; 
-      min-width: 100em; 
+      min-width: 100%;
       min-height: 100%;
-
 }
 
 /*******************************************************************************************/
