flyttet på hinduisme og islam filene

--- a/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
@@ -1,2 +1,87 @@
-<h1>StaticPages::Barn::Rle#hinduisme</h1>
-<p>Find me in app/views/static_pages/barn/rle/hinduisme.html.erb</p>
+<!doctype html>
+<html class="no-js hinduisme" lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Forside Barn</title>
+  <link rel="stylesheet" href="/assets/barn/religion.css" />
+  <%= javascript_include_tag "vendor/modernizr" %>
+</head>
+
+<body>
+
+<!--MENU-->
+<%= render 'shared/page_header' %>
+
+
+
+<section id="test">
+
+  <div class="row" id="mainMenu">
+
+    <div class="large-3 medium-6 small-6 columns">
+      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
+    </div>
+    <div class="large-3 medium-6 small-6 columns">
+      <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake">
+      </a>
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      <h1 class="fagh">HINDUISME</h1>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/shiva.png" draggable="false" alt="Shiva bilde">
+      </div>
+    </div>
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/ganesha.png" draggable="false" alt="Ganesha bilde">
+      </div>
+    </div>
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/murugan.png" draggable="false" alt="Murugan bilde">
+      </div>
+    </div>
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/durga.png" draggable="false" alt="Durga bilde">
+      </div>
+    </div>
+
+
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/film.png" draggable="false" alt="Film oppgaver-bilde">
+      </div>
+    </div>
+
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <img src="/assets/barn/hinduisme/tegn.png" draggable="false" alt="Film med tegnspråk">
+      </div>
+    </div>
+    <div class="large-3"></div>
+  </div>
+
+
+</section>
+<!-- Footer -->
+
+
+<%= render 'shared/page_footer' %>
+
+<!-- FOOTER SLUTT -->
+
+</body>
+
+</html>
