--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -30,7 +30,7 @@
     </div>
     
     <div class="large-3 medium-6 small-6 columns">
-      <a href="./forside.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
+      <a href="forside.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
     </div>
   </div>
   
@@ -46,14 +46,14 @@
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" draggable="false" alt="Hinduismebilde">
+          <a href="rle/hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" draggable="false" alt="Hinduismebilde">
           </a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="islam.html"><img src="/assets/barn/RLE/islam.png" draggable="false" alt="Islambilde"> </a>
+          <a href="rle/islam.html"><img src="/assets/barn/RLE/islam.png" draggable="false" alt="Islambilde"> </a>
         </div>
       </div>
 
