--- a/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
@@ -24,7 +24,7 @@
       <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
     </div>
     <div class="large-3 medium-6 small-6 columns">
-      <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake">
+      <a href="../rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake">
       </a>
 
     </div>
