--- a/Salabytest/app/views/static_pages/barn/rle/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/islam.html.erb
@@ -30,7 +30,7 @@
     </div>
 
       <div class="large-3 medium-6 small-6 columns">
-        <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
+        <a href="../rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
       </div>
   </div>
 
