--- a/Salabytest/app/assets/stylesheets/barn/religion.css
+++ b/Salabytest/app/assets/stylesheets/barn/religion.css
@@ -61,6 +61,17 @@
     margin-top: 10px;
     width: 50px;
     right: 20px;
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    -moz-transition: all 0.15s ease-in-out 0s;
+    -o-transition: all 0.15s ease-in-out 0s;
+}
+
+#backArrow:hover{
+    transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    /* IE 9 */
+    -webkit-transform: scale(1.1, 1.1);
+    /* Chrome, Safari, Opera */
 }
 
 
