--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -63,7 +63,7 @@ input[type="submit"]{
     font-size: 20pt;
 }
 
-input[type="text"]{
+input[type="text"],input[type="password"] {
     font-family: helvetica;
 }
 
