oppdeling av kode ferdig

--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -31,240 +31,18 @@
   <!--Skoleveien meny-->
   <%= render 'skoleveienMeny' %>
  
+  <!-- Fagene til skoleveien -->
+  <%= render 'skoleveienFag' %>
 
-  <!--!!!!!!!!!!!!!!!!SKOLESTART FAG!!!!!!!!!!!!!!!!!!!!-->
-  <div class="row skolestart">
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/skolestart/engelsk.png" alt="engelsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/skolestart/matte.png" alt="matte fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/skolestart/naturfag.png" alt="naturfag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/skolestart/norsk.png" alt="norsk fag">
-      </div>
-    </div>
-  </div>
-  <!--!!!!!!!!!!!!!!!!SKOLESTART FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
+  <!-- kanalS fag -->
+  <%= render 'kanalSFag' %>
 
-  <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
-  <div class="row forste">
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/forste/Engelsk.png" alt="engelsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/forste/naturfag.png" alt="naturfag fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/forste/norsk.png" alt="norsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/forste/RLE.png" alt="RLE fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/forste/sammfunn.png" alt="samfunnsfag">
-      </div>
-    </div>
-  </div>
-  <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
-
-  <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
-  <div class="row andre">
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/andre/Engelsk.png" alt="engelsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/andre/naturfag.png" alt="naturfag fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/andre/norsk.png" alt="norsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/andre/RLE.png" alt="RLE fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/andre/sammfunn.png" alt="samfunsfag">
-      </div>
-    </div>
-  </div>
-  <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
-
-  <!--!!!!!!!!!!!!!!!!MORSMÅL FAG!!!!!!!!!!!!!!!!!!!!-->
-  <div class="row morsmaal">
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Filippinsk.png" alt="Filippinsk">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Litausk.png" alt="Litausk">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Polsk.png" alt="Polsk">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Somali.png" alt="Somali">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Tamil.png" alt="Tamil">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Tiginja.png" alt="Tiginja">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/Tyrkisk.png" alt="Tyrkisk">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/skoleveien/morsmaal/TilLæreren.png" alt="Til Læreren">
-      </div>
-    </div>
-  </div>
-  <!--!!!!!!!!!!!!!!!!MORSMÅL SLUTT FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
-
-  <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG!!!!!!!!!!!!!!!!!!!-->
-  <!-- mobil meny -->
-  <div id="kanalSButtonMobil" class="small-12 columns">
-    <div class="menu-option">
-      <img draggable="false" src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
-    </div>
-  </div>
-  <!-- mobil meny SLUTT!-->
-  <div class="row kanalS">
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-         <%=link_to image_tag("barn/kanalS/RLE.png", border: 0),  {action: 'rle', controller: 'static_pages/barn'},{class: 'dock-item'}%>
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/grunnlovsjub.png" alt="grunnlovs jubeleums fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/historieNorge.png" alt="norgeshistorie fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/historieEuropa.png" alt="historie om europa fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/kunst.png" alt="kunst fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/matOghelse.png" alt="mat og helse fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/matte.png" alt="matte fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/naturfag.png" alt="naturfag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/norsk.png" alt="norsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/Engelsk.png" alt="engelsk fag">
-      </div>
-    </div>
-    <div class="large-4 small-6 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
-      </div>
-    </div>
-  </div>
-  <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG SLUTT!!!!!!!!!!!!!!!!!!!-->
-
-  <!--!!!!!!!!!!!!!!!!!MFL FAG!!!!!!!!!!!!!!!!!!!!!!-->
-  <!-- mobil meny -->
-  <div id="MFLButtonMobil" class="small-12 columns">
-    <div class="menu-option">
-      <img draggable="false" src="/assets/barn/menyer/MFL.png" alt="MFL meny">
-    </div>
-  </div>
-  <!-- mobil meny SLUTT!-->
-  <div class="row MFL">
-    <div class="large-4 small-12 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/mfl/mflbarnehage.png" alt="barnehage fag">
-      </div>
-    </div>
-    <div class="large-4 small-12 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/mfl/mflmatematikk.png" alt="matematikk fag">
-      </div>
-    </div>
-    <div class="large-4 small-12 columns">
-      <div class="align-center">
-        <img draggable="false" src="/assets/barn/mfl/mflnaturfag.png" alt="naturfag">
-      </div>
-    </div>
-  </div>
-  <!--!!!!!!!!!!!!!!!!MFL FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
+  <!--MFL fag-->
+  <%= render 'mFLFag' %>
+  
 </div>
 
 <%= render 'shared/page_footer' %>
-
-
 
 <!--!!!!!!!!!!!!!!!!! MAIN SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
