--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -21,7 +21,7 @@ body {
       position: fixed; 
       top: 0; 
       left: 0; 
-      min-width: 100%;
+      min-width: 100em;
       min-height: 100%;
 }
 
