--- a/Salabytest/app/views/static_pages/info/kompetanse.html.erb
+++ b/Salabytest/app/views/static_pages/info/kompetanse.html.erb
@@ -58,7 +58,8 @@
         <div id="innholdWrapper">
           <!--ACCORD START-->
           <dl id="engelskAco" class="accordion" data-accordion>
-            <dd class="accordion-navigation">
+            <dt>Engelsk</dt>
+              <dd class="accordion-navigation">
               <a href="#panel1b">Engelsk / Etter 2.årstrinn</a>
               <div id="panel1b" class="content">
                 <ul>
@@ -177,6 +178,7 @@
 
           <!--ACCORD START-->
           <dl id="norskAco" class="accordion" data-accordion>
+              <dt>Norsk</dt>
             <dd class="accordion-navigation">
               <a href="#panel4b">Norsk / Etter 2.årstrinn</a>
               <div id="panel4b" class="content">
@@ -227,6 +229,7 @@
 
           <!--ACCORD START-->
           <dl id="naturAco" class="accordion" data-accordion>
+              <dt>Naturfag</dt>
             <dd class="accordion-navigation">
               <a href="#panel7b">Naturfag / Etter 2.årstrinn</a>
               <div id="panel7b" class="content">
@@ -276,6 +279,7 @@
 
           <!--ACCORD START-->
           <dl id="kohAco" class="accordion" data-accordion>
+              <dt>Kunst og Håndverk</dt>
             <dd class="accordion-navigation">
               <a href="#panel1c">Kunst og Håndverk / Etter 2.årstrinn</a>
               <div id="panel1c" class="content">
@@ -324,6 +328,7 @@
           <!--ACCORD SLUTT-->
           <!--ACCORD START-->
           <dl id="mohAco" class="accordion" data-accordion>
+              <dt>Mat og helse</dt>
             <dd class="accordion-navigation">
               <a href="#panel4c">Mat og helse / Etter 2.årstrinn</a>
               <div id="panel4c" class="content">
@@ -347,6 +352,7 @@
 
           <!--ACCORD START-->
           <dl id="rleAco" class="accordion" data-accordion>
+              <dt>RLE</dt>
             <dd class="accordion-navigation">
               <a href="#panel7c">RLE / Etter 2.årstrinn</a>
               <div id="panel7c" class="content">
@@ -395,6 +401,7 @@
           <!--ACCORD SLUTT-->
           <!--ACCORD START-->
           <dl id="musikkAco" class="accordion" data-accordion>
+              <dt>Musikk</dt>
             <dd class="accordion-navigation">
               <a href="#panel1d">Musikk / Etter 2.årstrinn</a>
               <div id="panel1d" class="content">
@@ -418,6 +425,7 @@
 
           <!--ACCORD START-->
           <dl id="matteAco" class="accordion" data-accordion>
+              <dt>Matte</dt>
             <dd class="accordion-navigation">
               <a href="#panel4d">Mattematikk / Etter 2.årstrinn</a>
               <div id="panel4d" class="content">
@@ -466,6 +474,7 @@
           <!--ACCORD SLUTT-->
           <!--ACCORD START-->
           <dl id="samfunnAco" class="accordion" data-accordion>
+              <dt>Samfunn</dt>
             <dd class="accordion-navigation">
               <a href="#panel7d">Samfunnsfag / Etter 2.årstrinn</a>
               <div id="panel7d" class="content">
