--- a/Salabytest/app/views/users/index.html.erb
+++ b/Salabytest/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Fornavn</th>
+      <th>Fornavnet</th>
       <th>Etternavn</th>
       <th colspan="3"></th>
     </tr>
