Lagt til admin-panel, endret tilbake-knapper

--- a/Salabytest/app/views/departments/show.html.erb
+++ b/Salabytest/app/views/departments/show.html.erb
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <% if  %>
+                    <% if true%>
                     <div class="large-8 columns">
                     <div class="panel">
                     <div id="classesArea">
