--- a/Salabytest/app/views/schools/index.html.erb
+++ b/Salabytest/app/views/schools/index.html.erb
@@ -22,4 +22,5 @@
 
 <br>
 
-<%= link_to 'New School', new_school_path %>
+<%= link_to 'Opprett skole', new_school_path %> |
+<%= link_to "Tilbake", :back %>
