jobbet med script barneside
jobbet med script på barnesiden

--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -81,6 +81,9 @@ body {
     overflow-x: hidden;
 }
 
+img {
+-webkit-transition:-webkit-filter 0.2s ease-in-out;        
+}
 
 #background-image{
   position: fixed;
